<resources>
    <string name="app_name">Puzzle Block</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Settings</string>
    <string name="title_notifications">Stats</string>
    <string name="answer_message">Answer...</string>
    <string name="button_answer">Submit</string>
    <string name="PuzzleBody">PuzzleBody</string>
    <string name="channel_name">Puzzle Notification</string>
    <string name="channel_description">Notification for puzzles</string>
    <string name="overlay_text">You must complete a puzzle to continue!</string>
    <string name="Category1">Maths</string>
    <string name="Category1Body">A Variety of Maths Puzzles to Challenge Yourself</string>
    <string name="Category2">Words</string>
    <string name="Category2Body">Puzzles to Improve Your English Skills</string>
    <string name="Category3">Trivia</string>
    <string name="Category3Body">General Knowledge Questions From a Range of Subjects</string>
    <string name="BreakBody">The Length of Your Break After Completing a Puzzle.
        Also The Time Blocked After Failing a Puzzle</string>
    <string name="BreakTitle">Time</string>
</resources>